# ai-velocity-dashboard

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  packages.txt  pyproject.toml  requirements.txt  setup.py  setup.sh
app/: __init__.py  main.py  py.typed
app/services/: github_service.py  langsmith_service.py
app/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_services.py
